--- a/index.html
+++ b/index.html
@@ -1,6 +1,70 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <title>Sang Lin</title>
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
+    <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
+    <link rel="stylesheet" href="main.css">
+
+</head>
 <body>
-<h1>Hello World!</h1>
+    <div class="header">
+         <div class="container">
+            <a href="index.html" style="text-decoration: none;color: rgba(0, 0, 0, 0.80);float: left">
+                <strong style="font-size: 30px">Sang&nbsp;&nbsp;Lin</strong>&nbsp;&nbsp;&nbsp;♨Software Engineer</a>
+            <ul class="menu">
+                <li><a href="template/resume-sang.html">Resume</a></li>
+                <li><a href="template/projects-sang.html">Projects</a></li>
+                <li><a href="#">Life</a></li>
+            </ul>
+         </div>
+    </div>
+
+    <div class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-4 morra-center">
+                    <div class="Sang">
+                        <img class="img-circle" src="img/avatar-sang.JPG" width="300" height="300">
+                    </div>
+                </div>
+                <div class="col-xs-6 summary">
+                    <h1><strong style="font-size: 50px">Hello</strong>,<br>
+                    a bit about me :</h1>
+                    <div class="row button-area">
+                        <div class = "col-xs-4 morra-center">
+                            <a href="template/resume-sang.html"><img class="img-circle button" src="img/button-resume.jpg" width="140" height="140"></a>
+                        </div>
+                        <div class = "col-xs-4 morra-center">
+                            <a href="template/projects-sang.html"><img class="img-circle button" src="img/button-project.jpg" width="140" height="140"></a>
+                        </div>
+                        <div class = "col-xs-4 morra-center">
+                            <a href="#"><img class="img-circle button" src="img/button-life.jpg" width="140" height="140"></a>
+                        </div>
+                    </div>
+                    <p>I just achieved my Master of Science degree in Rutgers University, which majored in Computer Engineering. <br>
+                        Currently, I am actively seeking the position as Software Engineer.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <div class="container">
+            <ul class="social-media">
+                <li><img style="padding-right: 20px" src="img/email.png"></li>
+                <li>linsang90@gmail.com</li>
+                <li><a href="https://github.com/linsang90"><img style="padding-left:50px " src="img/github.png"></a></li>
+                <li><a href="https://www.linkedin.com/in/sanglin90"><img style="padding-left: 20px" src="img/linkedin.png"></a></li>
+                <li><a href="https://www.instagram.com/kiddolin21/"><img style="padding-left: 20px;padding-right: 20px" src="img/instagram.png"></a></li>
+                <li>Follow me</li>
+                <li><img style="padding-left: 50px;padding-right: 20px" src="img/like.png"></li>
+                <li>©2015 By Sang Lin</li>
+            </ul>
+        </div>
+    </footer>
+
 </body>
 </html>
